grpc_web_with_gke/gke_config/be-grpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: be-srv-grpc
  labels:
    type: be-srv-grpc
  annotations:
      service.alpha.kubernetes.io/app-protocols: '{"be-grpc":"HTTP2"}'    
spec:
  type: NodePort
  ports:
  - name: be-grpc
    port: 50051
    protocol: TCP
    targetPort: 50051      
  selector:
    app: be
