grpc_web_with_gke/gke_config/fe-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv
  labels:
    type: fe-srv
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"fe":"HTTPS"}'  
spec:
  type: NodePort 
  ports:
  - name: fe
    port: 8000
    protocol: TCP
    targetPort: 8000   
  selector:
    app: fe
